apps/rustfs/k8s/rustfs-root-redirect.middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rustfs-root-redirect
  namespace: rustfs
spec:
  redirectRegex:
    permanent: true
    regex: ^https://rustfs\.(biplane\.casa)/$
    replacement: https://rustfs.$1/rustfs/console/
